Added simple Arithmetic.js module

--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
 <body>
-  <h1>ES5 Module</h1>
+  <h1>JavaScript CommonJS (ES5) Modules</h1>
+
+  <div>
+    A
+    <input type = "number" id= "a"/>
+  </div>
+  <br>
+  <div>
+    B
+    <input type = "number" id= "n"/>
+  </div>
+  <br>
+  <button onclick= "add()">
+    Add
+  </button>
+
   <div id="app"></div>
 </body>
