Formatted Arithmetic.js code

--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 
   <div>
     A
-    <input type = "number" id= "a"/>
+    <input type="number" id="a" />
   </div>
-  <br>
+  <br />
   <div>
     B
-    <input type = "number" id= "n"/>
+    <input type="number" id="n" />
   </div>
-  <br>
-  <button onclick= "add()">
-    Add
-  </button>
+  <br />
+  <button onclick="add()">Add</button>
 
   <div id="app"></div>
 </body>
