2 files modified, 1 added, 1 deleted

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <br />
   <div>
     B
-    <input type="number" id="n" />
+    <input type="number" id="b" />
   </div>
   <br />
-  <button onclick="add()">Add</button>
+  <button id="add-button">Add</button>
 
   <div id="app"></div>
 </body>
